# src/controllers/health.controller.ts
@@ -1,24 +1,21 @@
-import { HealthService } from "@CRUD_PG/services/health.service";
+// import { HealthService } from "@CRUD_PG/services/health.service";
+// import Container from "typedi";
 import { Get, Route, SuccessResponse as Success } from "tsoa";
-import { SuccessResponse } from "@CRUD_PG/utils/response";
-import Container from "typedi";
 import { StatusCode } from "@CRUD_PG/utils/consts";
 
 @Route("/api/v1")
 export class HealthController {
-  private readonly _heathService: HealthService;
+  // private readonly _heathService: HealthService;
 
   constructor() {
-    this._heathService = Container.get(HealthService);
+    // this._heathService = Container.get(HealthService);
   }
 
   @Get("/health")
   @Success(StatusCode.OK, "OK")
-  public async checkHealth(): Promise<SuccessResponse<{}>> {
+  public async checkHealth() {
     try {
-      console.log("HI");
-      const userHealth = await this._heathService.checkHealthUser();
-      return new SuccessResponse("", "", { userHealth });
+      return "HI";
     } catch (error: unknown) {
       throw error;
     }
